fix hover button